# Terrafier

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md
bench/: Cargo.toml
bench/benches/: nbt.rs  render.rs  world.rs
bench/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cmds/: info.rs  mod.rs  new.rs  render.rs
cli/src/cmds/io/: export.rs  import.rs  mod.rs
cli/src/util/: mod.rs  output.rs  progress.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/coords/: mod.rs
core/src/io/: binary.rs  export.rs  import.rs  layer_export.rs  minecraft.rs  mod.rs  wp_import.rs
core/src/io/layer_export/: biome_res.rs  caves_frost.rs  mod.rs  river_trees.rs
core/src/io/minecraft/: mod.rs  reader.rs  version.rs
core/src/io/minecraft/export/: blocks.rs  chunk.rs  mod.rs  writer.rs
core/src/io/wp_import/: extract.rs  java_reader.rs  mod.rs
core/src/io/wp_import/types/: java_classdesc.rs  java_fields.rs  java_types.rs  mod.rs
core/src/model/: brush.rs  dimension.rs  layers.rs  mod.rs  platform.rs  terrain.rs  tile.rs  types.rs  world.rs
core/src/model/layers/: builtin.rs  caves.rs  mod.rs  surface.rs
core/src/model/world/: mod.rs  world.rs
core/src/ops/: filters.rs  heightmap.rs  mod.rs  operations.rs
core/src/ops/layers/: mod.rs
core/src/ops/layers/noise/: caves.rs  frost.rs  mod.rs  river.rs
core/src/ops/layers/terrain/: biome.rs  mod.rs  resources.rs  trees.rs
core/src/ops/operations/: fill.rs  mod.rs
core/src/ops/operations/brush/: paint.rs
core/src/ops/operations/shaping/: erode.rs  height.rs  mod.rs  smooth.rs
core/src/plugins/: export_plugin.rs  layer_plugin.rs  mod.rs  operation_plugin.rs  registry.rs  source_plugin.rs  traits.rs
core/tests/: golden_test.rs
crates/biome-db/: Cargo.toml
crates/biome-db/data/: biomes.json  foliage_colormap.json  grass_colormap.json
crates/biome-db/src/: colour.rs  db.rs  lib.rs
crates/fastanvil/: Cargo.toml
crates/fastanvil/src/: compression.rs  lib.rs
crates/fastanvil/src/io/: chunk.rs  mod.rs  region.rs
crates/fastanvil/src/io/chunk/: chunk.rs  chunk_write.rs  mod.rs
crates/fastanvil/src/io/region/: mod.rs  region.rs  region_write.rs
crates/nbt/: Cargo.toml
crates/nbt/src/: lib.rs  tag.rs
crates/nbt/src/io/: mod.rs  reader.rs  writer.rs
crates/nbt/src/io/read/: mod.rs  read_tag.rs  reader.rs
crates/nbt/src/io/write/: mod.rs  write_tag.rs  writer.rs
crates/noise/: Cargo.toml
crates/noise/src/: lib.rs
crates/palette-compress/: Cargo.toml
crates/palette-compress/src/: bits.rs  lib.rs  palette.rs  section.rs
crates/palette-compress/src/palette/: mod.rs  palette.rs  palette_io.rs
docs/benchmarks/: baseline.md  profile.md
gui/: Cargo.toml
gui/src/: app.rs  lib.rs  main.rs  tools.rs  view.rs
gui/src/app/: mod.rs  ops.rs  update.rs
gui/src/dialogs/: export.rs  mod.rs  new_world.rs
gui/src/renderer/: mod.rs  pipeline.rs  render.rs  shaders.wgsl
gui/src/view/: cpu.rs  gpu.rs  mod.rs  tools.rs
scripts/: download_colormap_pngs.py  extract_colormaps.py  release.ps1  release.sh  scrape_biomes.py
