[workspace]
resolver = "3"
members = [
    "core",
    "cli",
    "gui",
    "crates/nbt",
    "crates/fastanvil",
    "crates/noise",
    "crates/palette-compress",
    "crates/biome-db",
    "bench",
]

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "GPL-3.0-or-later"
authors = ["Loki"]
description = "A high-performance Minecraft world painter, written in Rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"
serde-big-array = "0.5"
bincode = "1.3"

[workspace.metadata.dist]
# Инициализируется при первом запуске cargo dist init

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
