[package]
name = "terrafier-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for Terrafier — create, edit, export Minecraft worlds from the command line"

[dependencies]
terrafier-core = { path = "../core" }
clap.workspace = true
anyhow.workspace = true
indicatif.workspace = true
log.workspace = true
env_logger.workspace = true
serde_json.workspace = true
