[package]
name = "terrafier-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native GUI for Terrafier — interactive world painting with GPU rendering"

[dependencies]
terrafier-core = { path = "../core" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true

egui = "0.31"
eframe = { version = "0.31", features = ["wgpu"] }
egui-wgpu = "0.31"
wgpu = { version = "24", features = ["vulkan-portability", "webgl"] }
rfd = "0.15"
