[package]
name = "terrafier-nbt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-copy NBT (Named Binary Tag) parser and writer for Minecraft data"

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
